# 060-bloomberggpt-trading

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  backtest.py  data_loader.py  impact.py  requirements.txt  sentiment.py  signals.py
python/examples/: 01_sentiment_demo.py  02_signal_generation.py  03_backtest_demo.py
rust_bloomberggpt/: Cargo.toml  README.md
rust_bloomberggpt/benches/: sentiment_benchmark.rs
rust_bloomberggpt/src/: api.rs  backtest.rs  data.rs  error.rs  lib.rs  sentiment.rs  signals.rs
